--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
     "clsx": "^1.1.1",
+    "history": "^5.2.0",
     "jquery": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
