--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
+    "@material-ui/core": "^4.12.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-google-maps/api": "^2.2.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -12,8 +13,10 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
     "clsx": "^1.1.1",
+    "google-map-react": "^2.1.10",
     "history": "^5.2.0",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
