--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui/x-data-grid": "^4.0.2",
     "@react-google-maps/api": "^2.2.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.6",
@@ -12,13 +13,16 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
+    "chart.js": "^3.7.0",
     "clsx": "^1.1.1",
     "google-map-react": "^2.1.10",
     "history": "^5.2.0",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
