--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scripts": "4.0.1",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xlsx": "^0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
